src/test/ui/parser/mod_file_with_path_attr.stderr
error: couldn't read "C:/msys64/home/we/rust/src/test/ui/parser/not_a_real_file.rs": The system cannot find the file specified. (os error 2)
  --> $DIR/mod_file_with_path_attr.rs:14:5
   |
LL | mod m; //~ ERROR not_a_real_file.rs
   |     ^

error: aborting due to previous error

